Preparing for Windows Service installation.