@@ -54,6 +54,7 @@
     </scm>
 
     <properties>
+        <service.name>Whydah-UserIdentityBackend</service.name>
         <jersey.version>1.6</jersey.version>
         <grizzy.version>2.1</grizzy.version>
         <apache.ds.version>2.0.0-M16</apache.ds.version>
@@ -330,22 +331,100 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--
+            <!--Create Windows, and Unix/Linux installation scripst -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.8.1</version>
+                <configuration>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <includeConfigurationDirectoryInClasspath>false</includeConfigurationDirectoryInClasspath>
+                    <target>${project.build.directory}</target>
+                    <daemons>
+                        <daemon>
+                            <id>${project.name}</id>
+                            <mainClass>net.whydah.identity.Main</mainClass>
+                            <platforms>
+                                <platform>jsw</platform>
+                            </platforms>
+                            <generatorConfigurations>
+                                <generatorConfiguration>
+                                    <generator>jsw</generator>
+                                    <includes>
+                                        <!--<include>windows-x86-32</include>-->
+                                        <include>windows-x86-64</include>
+                                    </includes>
+                                    <configuration>
+                                        <property>
+                                            <name>configuration.directory.in.classpath.first</name>
+                                            <value>config_override</value>
+                                        </property>
+                                        <property>
+                                            <name>set.default.REPO_DIR</name>
+                                            <value>lib</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile</name>
+                                            <value>logs/wrapper.log</value>
+                                        </property>
+
+                                        <property>
+                                            <name>wrapper.console.title</name>
+                                            <value>${service.name}</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.ntservice.name</name>
+                                            <value>${service.name}</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.ntservice.displayname</name>
+                                            <value>${service.name}</value>
+                                        </property>
+                                    </configuration>
+                                </generatorConfiguration>
+                            </generatorConfigurations>
+                            <jvmSettings>
+                                <initialMemorySize>32M</initialMemorySize>
+                                <maxMemorySize>256M</maxMemorySize>
+                                <extraArguments>
+                                    <extraArgument>-XX:PermSize=32m</extraArgument>
+                                    <extraArgument>-XX:MaxPermSize=32m</extraArgument>
+                                    <extraArgument>-DIAM-MODE=PROD</extraArgument>
+                                    <extraArgument>-DIAM_CONFIG=config_override/useridentitybackend.PROD.properties</extraArgument>
+                                    <!--<extraArgument>-Dlogback.configurationFile=file:config_override/logback.xml</extraArgument>-->
+                                </extraArguments>
+                            </jvmSettings>
+                        </daemon>
+                    </daemons>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-jsw-scripts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptors>
-                        <descriptor>src/main/assembly/winservice.xml</descriptor>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
                     </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>assemble-zip</id>
                         <phase>package</phase>
-                        <goals><goal>single</goal></goals>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
     </build>
 
